[mobile toolbar fix,added lang,contact page fix] * added language select option for mobile devices * fixed style and typo in contact * fixed contact map scroll on desktop

--- a/src/assets/i18n/sr.json
+++ b/src/assets/i18n/sr.json
@@ -32,8 +32,8 @@
   },
   "CONTACT": {
     "phone": "Telefon",
-    "address": "Adresas",
-    "writeUs": "Pisite nam",
+    "address": "Adresa",
+    "writeUs": "Pišite nam",
     "writeUsText": "Cilj nam je da odgovorimo u roku od 24 sata, međutim, tokom zauzetih perioda poput praznika, rasprodaja i posebnih kampanja, možda će potrajati malo duže.",
     "help": "Potrebna Vam je podrška",
     "fillForm": "Jednostavno popunite obrazac i kliknite na 'pošalji' da biste poslali upit"
