[size chart] * size chart table

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -89,7 +89,8 @@
     "size": "SIZE",
     "heelSize": "Heel size",
     "description": "DESCRIPTION",
-    "addToCart": "ADD TO CART"
+    "addToCart": "ADD TO CART",
+    "sizeChart": "Size chart"
   },
   "ITEMDESCRIPTION": {
     "desc1": "",
