--- a/src/assets/i18n/sr.json
+++ b/src/assets/i18n/sr.json
@@ -89,7 +89,8 @@
     "size": "VELIČINA",
     "heelSize": "VISINA PODPETICE",
     "description": "OPIS",
-    "addToCart": "DODAJ U KORPU"
+    "addToCart": "DODAJ U KORPU",
+    "sizeChart": "Tabela velicina"
   },
   "ITEMDESCRIPTION": {
     "desc1": "",
