--- a/src/assets/i18n/sr.json
+++ b/src/assets/i18n/sr.json
@@ -35,7 +35,7 @@
     "address": "Adresa",
     "writeUs": "Pišite nam",
     "writeUsText": "Cilj nam je da odgovorimo u roku od 24 sata, međutim, tokom zauzetih perioda poput praznika, rasprodaja i posebnih kampanja, možda će potrajati malo duže.",
-    "help": "Potrebna Vam je podrška",
+    "help": "Potrebna Vam je pomoć",
     "fillForm": "Jednostavno popunite obrazac i kliknite na 'pošalji' da biste poslali upit"
   },
   "CART": {
