-Image on products/{param} (sandals/boots/pumps)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -107,5 +107,8 @@
   "black": "BLACK",
   "blue": "BLUE",
   "more": "More",
-  "viewAll": "View all"
+  "viewAll": "View all",
+  "Woman sandals": "Woman Sandals",
+  "Woman boots": "Woman Boots",
+  "Woman pumps": "Woman Pumps"
 }
