--- a/src/assets/i18n/sr.json
+++ b/src/assets/i18n/sr.json
@@ -107,5 +107,8 @@
   "black": "CRNA",
   "blue": "PLAVA",
   "more": "Detaljnije",
-  "viewAll": "Pogledaj sve"
+  "viewAll": "Pogledaj sve",
+  "Woman sandals": "Sandale",
+  "Woman boots": "Cizme",
+  "Woman pumps": "Cipele"
 }
