-New products, toolbar new items section

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,7 +4,8 @@
     "shoes": "Shoes",
     "bags": "Bags",
     "aboutus": "About us",
-    "contact": "Contact"
+    "contact": "Contact",
+    "new": "New"
   },
   "HOME": {
     "ourShop": "Our shop",
