--- a/src/assets/i18n/sr.json
+++ b/src/assets/i18n/sr.json
@@ -4,7 +4,8 @@
     "shoes": "Obuća",
     "bags": "Torbe",
     "aboutus": "O nama",
-    "contact": "Kontakt"
+    "contact": "Kontakt",
+    "new": "Novo"
   },
   "HOME": {
     "ourShop": "Naša ponuda",
