- Small fixes - Toolbar fix naming & routes - products.component.ts fix - Translate fixes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,8 @@
     "bags": "Bags",
     "aboutus": "About us",
     "contact": "Contact",
+    "identita": "Identita",
+    "lapista": "La Pista",
     "new": "New"
   },
   "HOME": {
