--- a/src/assets/i18n/sr.json
+++ b/src/assets/i18n/sr.json
@@ -5,6 +5,8 @@
     "bags": "Torbe",
     "aboutus": "O nama",
     "contact": "Kontakt",
+    "identita": "Identita",
+    "lapista": "La Pista",
     "new": "Novo"
   },
   "HOME": {
@@ -110,6 +112,6 @@
   "more": "Detaljnije",
   "viewAll": "Pogledaj sve",
   "Woman sandals": "Sandale",
-  "Woman boots": "Cizme",
+  "Woman boots": "Čizme",
   "Woman pumps": "Cipele"
 }
