-Lapista heading image on home

--- a/src/assets/i18n/sr.json
+++ b/src/assets/i18n/sr.json
@@ -111,7 +111,9 @@
   "blue": "PLAVA",
   "more": "Detaljnije",
   "viewAll": "Pogledaj sve",
+  "viewNewCollection": "Nova kolekcija",
   "Woman sandals": "Sandale",
   "Woman boots": "Čizme",
-  "Woman pumps": "Cipele"
+  "Woman pumps": "Cipele",
+  "NewCollectionTitle": "Nova La Pista kolekcija"
 }
