--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -111,7 +111,9 @@
   "blue": "BLUE",
   "more": "More",
   "viewAll": "View all",
+  "viewNewCollection": "New collection",
   "Woman sandals": "Woman Sandals",
   "Woman boots": "Woman Boots",
-  "Woman pumps": "Woman Pumps"
+  "Woman pumps": "Woman Pumps",
+  "NewCollectionTitle": "New La Pista collection"
 }
