Lapista models, separated layout - new layout for lapista shoes because we need it separated only by color - new lapista module,product text & product image made to accept param - other minor changes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -115,5 +115,9 @@
   "Woman sandals": "Woman Sandals",
   "Woman boots": "Woman Boots",
   "Woman pumps": "Woman Pumps",
-  "NewCollectionTitle": "New La Pista collection"
+  "NewCollectionTitle": "New La Pista collection",
+  "errorPageTitle": "Bad Url",
+  "errorPageTitle2": "Invalid page",
+  "errorPageMessage": "Go back to other page",
+  "LEATHER": "Leather"
 }
